--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,30 @@
-yake==0.4.8
-tqdm==4.59.0
-charset_normalizer==2.0.4
-pandas==1.2.4
-nltk==3.6.1
-spacy==3.1.1
-numpy==1.21.1
-hjson==3.0.2
-lightgbm==3.2.1
-tensorflow==2.5.1
-mail_parser==3.15.0
-scipy==1.6.2
-seaborn==0.11.1
 ftfy==5.8
 contractions==0.0.52
+txtai==3.3.0
+fasttext==0.9.2
+charset_normalizer==2.0.4
+tqdm==4.59.0
+imbalanced_learn==0.8.1
+mail_parser==3.15.0
+matplotlib==3.3.4
+transformers==4.11.2
+Keras==2.3.1
+scipy==1.6.2
+langdetect==1.0.9
 xlrd==2.0.1
 wordcloud==1.8.1
+tensorflow==2.4.2
+seaborn==0.11.1
+lightgbm==3.2.1
+hjson==3.0.2
+spacy==3.1.1
+numpy==1.21.1
 jenkspy==0.2.0
-matplotlib==3.3.4
-langdetect==1.0.9
+pandas==1.2.4
+yake==0.4.8
+nltk==3.6.1
 beautifulsoup4==4.10.0
-scikit_learn==0.24.2
+imblearn==0.0
+scikit_learn==1.0
 utils==1.0.1
 xgboost==1.4.2
